--- a/pages/various/any.html
+++ b/pages/various/any.html
@@ -6,45 +6,48 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" type="text/css" href="../../decorate/main.css">
+    <link rel="stylesheet" type="text/css" href="../../assets/main.css">
 
-    <script type="text/javascript" src="../../function/main.js" defer></script>
+    <script type="text/javascript" src="../../assets/main.js" defer></script>
 </head>
 
 <body>
-    <div id="Grid">
-        <div class="content">
+    <h1>Side notes</h1>
+    <div class="content">
+        <div class="container">
             <h2>About wine</h2>
-            <div class="container">
-                <p>wine-stable + winetricks is enough.
-                <p>Run <u>winecfg</u> to generate '.wine' folder(which stores an windows 'sandbox').
-                <p>Maybe you want to change the dpi, so go to graphics-&gt;screen resolution.
-                <p>And change it to a prefer value.
 
-                <br><br>
+            <p>wine-stable + winetricks is enough.
+            <p>Run <u>winecfg</u> to generate '.wine' folder(which stores an windows 'sandbox').
+            <p>Maybe you want to change the dpi, so go to graphics-&gt;screen resolution.
+            <p>And change it to a prefer value.
 
-                <p>Run <u>winetricks dotnet45</u>, and done.
-            </div>
+            <div class="return"></div>
 
-            <h2>Gimp things</h2>
-            <div class="container">
-                <p>Smudge tool can move the pixels to correct position.
-                <p>Sometimes Path tool is better than Free select.
-
-                <br><br>
-
-                <p>Denoise and sharpen things:
-                <p>Filters-&gt;Blur-&gt;Selective Gaussian Blur
-                <p>Filters-&gt;Blur-&gt;Median Blur
-                <p>'Ctrl+,' or 'Ctrl+.' Fill bg/fg
-                <p>Filters-&gt;Enhance-&gt;Sharpen(Unsharp Mask)
-            </div>
-
-            <h2>Fav pictures</h2>
-            <div class="container">
-                <p>Download <a href="https://mediafire.com/folder/mj9uqfehwpzr0/Fav">here</a></p>
-            </div>
+            <p>Run <u>winetricks dotnet45</u>, and done.
         </div>
+
+        <div class="container">
+            <h2>Gimp things</h2>
+
+            <p>Smudge tool can move the pixels to correct position.
+            <p>Sometimes Path tool is better than Free select.
+
+            <div class="return"></div>
+
+            <p>Denoise and sharpen things:
+            <p>Filters-&gt;Blur-&gt;Selective Gaussian Blur
+            <p>Filters-&gt;Blur-&gt;Median Blur
+            <p>'Ctrl+,' or 'Ctrl+.' Fill bg/fg
+            <p>Filters-&gt;Enhance-&gt;Sharpen(Unsharp Mask)
+        </div>
+
+        <!--
+        <div class="container">
+            <h2>Fav pictures</h2>
+            <p>Download <a href="https://mediafire.com/folder/mj9uqfehwpzr0/Fav">here</a></p>
+        </div>
+        -->
     </div>
 </body>
 </html>
