--- a/index.html
+++ b/index.html
@@ -6,25 +6,22 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" type="text/css" href="./decorate/main.css">
+    <link rel="stylesheet" type="text/css" href="./assets/main.css">
 </head>
 
 <body>
     <div id="Menu">
         <a href="./" id="current">Home</a>
-        <a href="./pages/arch/arch_install">Arch installation</a>
-        <a href="./pages/osu/osu_cutt37">Osu infos</a>
+        <a href="./pages/arch/arch_install">Archlinux (archived)</a>
+        <a href="./pages/osu/osu_cutt37">Osu</a>
         <a href="./pages/various/any">Misc.</a>
     </div>
 
-    <div id="Grid">
-        <div class="content">
-            <h2>Some content goes here...</h2>
-            <div class="container">
-                <p>A website record various stuff.
-                <p>Idk how to fill this website.
-            </div>
+    <div class="content">
+        <div class="container">
+            <p>A place that store my configs and notes.
         </div>
     </div>
+
 </body>
 </html>
