--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div id="Menu">
         <a href="./" id="current">Home</a>
-        <a href="./pages/arch/arch_install">Archlinux (archived)</a>
+        <a href="./pages/arch/install">Archlinux (archived)</a>
         <a href="./pages/osu/osu_cutt37">Osu</a>
         <a href="./pages/various/any">Misc.</a>
     </div>
