--- a/pages/osu/osu_cutt37.html
+++ b/pages/osu/osu_cutt37.html
@@ -26,12 +26,12 @@
 
         <div class="container">
             <h2>And me</h2>
-            <p>First, I dont play classic(see every player's top pp lol) farms.
+            <p>First, I dont play classic farms(see every player's top pp lol).
             <p>Second, I'll put on nf if I hate that music(or cant play if star &gt; 6.5).
             <p>Third, dont like the community cuz not kind.
             <p>Fourth, dont play osu stable cuz works weird on linux.
             <p>Fifth, sd_mango queue sucks.
-            <p>Last, dont like lazer's new design.
+            <p>Last, osu-lazer sucks.
         </div>
     </div>
 </body>
