--- a/pages/osu/osu_cutt37.html
+++ b/pages/osu/osu_cutt37.html
@@ -21,11 +21,13 @@
             <p>Keyboard: Sayo O2C + Greywood v3 switch;
             <p>Resolution: 1920x1080, 15&quot;6
             <p>Typing: Alternate;
-            <p>Skin: <a href="https://mediafire.com/file/ccwdmu9b07d3exu/Idontknow.osk/file">Idontknow</a>
+            <p>Skin: <a href="https://mediafire.com/file/ccwdmu9b07d3exu/Idontknow.osk/file">here</a>;
+            <p>Status: inactive.
         </div>
 
         <div class="container">
             <h2>And me</h2>
+
             <p>First, I dont play classic farms(see every player's top pp lol).
             <p>Second, I'll put on nf if I hate that music(or cant play if star &gt; 6.5).
             <p>Third, dont like the community cuz not kind.
