--- a/index.html
+++ b/index.html
@@ -10,18 +10,18 @@
 </head>
 
 <body>
-    <div id="Menu">
+    <div id="menu">
         <a href="./" id="current">Home</a>
-        <a href="./pages/arch/install">Archlinux (archived)</a>
-        <a href="./pages/osu/osu_cutt37">Osu</a>
-        <a href="./pages/various/any">Misc.</a>
+        <a href="./pages/osu/cutt37">Osu</a>
+        <a href="./pages/various/any">Misc</a>
     </div>
 
-    <div class="content">
-        <div class="container">
-            <p>A place that store my configs and notes.
+    <div id="content">
+        <div class="text-group">
+            <div class="text-child">
+                <p>A place that store my configs and notes.
+            </div>
         </div>
     </div>
-
 </body>
 </html>
