--- a/pages/arch/install.html
+++ b/pages/arch/install.html
@@ -34,7 +34,7 @@
 
         <div class="text-group">
             <div class="text-child">
-                <h2>1. Connect to the internet(wireless)</h2>
+                <h2>Connect to the internet(wireless)</h2>
 
                 <p><u>ifconfig</u> to check the network card.
                 <p>Here <b>wlan0</b> as default.
@@ -54,7 +54,7 @@
 
         <div class="text-group">
             <div class="text-child">
-                <h2>2. Disk partition and format</h2>
+                <h2>Disk partition and format</h2>
 
                 <p>If you have an old pc, you should check your bios that support uefi or not.
                 <p>Since there are two choice to install arch: uefi and legacy.
@@ -120,7 +120,7 @@
 
         <div class="text-group">
             <div class="text-child">
-                <h2>3. Packages</h2>
+                <h2>Packages</h2>
 
                 <p>Switch mirrors to improve your download speed:
                 <a href="https://archlinux.org/mirrors/status/">Arch mirrorlist</a>
@@ -164,7 +164,7 @@
 
         <div class="text-group">
             <div class="text-child">
-                <h2>4. Time and language</h2>
+                <h2>Time and language</h2>
 
                 <p><u>ls /usr/share/zoneinfo</u> to list timezone.
                 <p>ln -sf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime
@@ -185,7 +185,7 @@
 
         <div class="text-group">
             <div class="text-child">
-                <h2>5. GRUB config</h2>
+                <h2>GRUB config</h2>
 
                 <p>Legacy:
                 <p>grub-install --target=i386-pc <u>/dev/nvme0n1p3</u>
@@ -209,7 +209,7 @@
 
         <div class="text-group">
             <div class="text-child">
-                <h2>6. Others</h2>
+                <h2>Others</h2>
 
                 <p>Add one account:
                 <p>useradd -m -G audio,storage,video,wheel <u>your-accountName</u>
