--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
     <div id="menu">
         <a href="./" id="current">Home</a>
+        <a href="./pages/arch/install">Archlinux(archived)</a>
         <a href="./pages/osu/cutt37">Osu</a>
     </div>
 
