--- a/pages/osu/cutt37.html
+++ b/pages/osu/cutt37.html
@@ -18,23 +18,20 @@
             <div class="text-child">
                 <h2>Setup</h2>
 
-                <p>Mouse: Logitech G102 (2 accel);
-                <p>Keyboard: Sayo O2C + Greywood v3 switch;
+                <p>Mouse: Logitech G102;
+                <p>Keyboard: Sayo O2C;
                 <p>Resolution: 1920x1080, 15&quot;6;
                 <p>Typing: Alternate;
                 <p>Skin: <a href="https://mediafire.com/file/ccwdmu9b07d3exu/Idontknow.osk/file">here</a>;
-                <p>Offset: +19.
+                <p>Offset: +19(Idk how to say this, I think this offset is comfort and accurate).
             </div>
-        
-            <div class="text-child">
-                <h2>And me</h2>
+        </div>
 
-                <p>I dont play pp.
-                <p>I prefer solo, multi meh.
-                <p>I dont like osu community.
-                <p>I dont play osu stable.
-                <p>I play NM, HR(HD, DT... less).
-                <p>Lazer sucks.
+        <div class="text-group">
+            <div class="text-child">
+                <p>The fuck they compete so hard...
+                <p>Probably online from the 14th to the 30th of each month.
+                <p>Lazer sucks xd.
             </div>
         </div>
     </div>
