--- a/pages/osu/cutt37.html
+++ b/pages/osu/cutt37.html
@@ -29,6 +29,8 @@
 
         <div class="text-group">
             <div class="text-child">
+                <h2>Some blahs</h2>
+
                 <p>The fuck they compete so hard...
                 <p>Probably online from the 14th to the 30th of each month.
                 <p>Lazer sucks xd.
