--- a/pages/osu/cutt37.html
+++ b/pages/osu/cutt37.html
@@ -23,7 +23,7 @@
                 <p>Resolution: 1920x1080, 15&quot;6;
                 <p>Typing: Alternate;
                 <p>Skin: <a href="https://mediafire.com/file/ccwdmu9b07d3exu/Idontknow.osk/file">here</a>;
-                <p>Offset: +19(Idk how to say this, I think this offset is comfort and accurate).
+                <p>Offset: +21(why offset changes while I changed my skin's hitsound).
             </div>
         </div>
 
