--- a/pages/osu/cutt37.html
+++ b/pages/osu/cutt37.html
@@ -13,7 +13,7 @@
 
 <body>
     <div id="content">
-        <h1>Introd.</h1>
+        <h1>Profile</h1>
         <div class="text-group">
             <div class="text-child">
                 <h2>Setup</h2>
