--- a/pages/osu/cutt37.html
+++ b/pages/osu/cutt37.html
@@ -22,7 +22,7 @@
                 <p>Keyboard: Sayo O2C;
                 <p>Resolution: 1920x1080, 15&quot;6;
                 <p>Typing: Alternate;
-                <p>Skin: <a href="https://mediafire.com/file/ccwdmu9b07d3exu/Idontknow.osk/file">here</a>;
+                <p>Skin: <a href="https://www.mediafire.com/file/jxl0t9737g4sjaf/Idontknow.osk/file">here</a>;
                 <p>Offset: +19.
             </div>
         </div>
