--- a/pages/osu/cutt37.html
+++ b/pages/osu/cutt37.html
@@ -31,11 +31,41 @@
             <div class="text-child">
                 <h2>Some blahs</h2>
 
-                <p>The fuck they compete so hard...
-                <p>Anyway...
-                <p>Lazer sucks xd.
-                <p>It's a shit that causes my computer lag.
-                <p>The lounge is totally fucked.
+                <p>blahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahs
+                <p>blahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahs
+                <p>blahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahs
+                <p>blahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahs
+                <p>blahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahs
+                <p>blahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahs
+                <p>blahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahs
+                <p>blahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahs
+                <p>blahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahs
+                <p>blahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahs
+                <p>blahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahs
+                <p>blahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahs
+                <p>blahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahs
+                <p>blahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahs
+                <p>blahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahs
+                <p>blahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahs
+                <p>blahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahs
+                <p>blahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahs
+                <p>blahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahs
+                <p>blahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahs
+                <p>blahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahs
+                <p>blahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahs
+                <p>blahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahs
+                <p>blahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahs
+                <p>blahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahs
+                <p>blahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahs
+                <p>blahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahs
+                <p>blahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahs
+                <p>blahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahs
+                <p>blahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahs
+                <p>blahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahs
+                <p>blahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahsblahs
+                <p>there's no difference between v1 and v2 lazer interface.
+                <p>both of them are meh.
+                <p>btw your table influence your acc 
             </div>
         </div>
     </div>
